Dont put your test in a module